# kattis

./: CMakeLists.txt
general/: logger.cpp
makeinput/: main.cpp
money/: main.cpp
